# uk-vatlab

./: .gitignore  Makefile  index.html  pyproject.toml  share_instructions.md  viewer.html
.claude/: README_bunching_analysis.html  agent_todo_vat_wedge.md
analysis/: README_bunching_analysis.html  README_bunching_analysis.md  bunching_temporal_analysis.csv  calculate_productivity.py  generate_synthetic_data.py  plot_example.py  reverse_productivity_estimation.py  sector_elasticities_hmrc.csv  static_revenue.py  synthesize_sector_elasticities.py  synthesize_sector_elasticities_enhanced.py  vat_optimization_model.html  vat_reform_comparison.py  vat_reform_simulator.py  vat_threshold_ratio_analysis.py  vat_threshold_ratio_analysis_v2.py
analysis/vat_threshold_analysis/: vat_threshold_2025_26.py  vat_threshold_2026_27.py
app/: README.md  docker-compose.yml
app/backend/: models.py  requirements.txt  vat_calculator.py  vercel.json
app/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
elasticity/: 01_main_wedge_calculation.py  02_why_negative_wedges.py  03_what_changed_with_correction.py  EXECUTIVE_SUMMARY.md  README.md  README_VAT_WEDGE_ANALYSIS.md  UK_passthrough_evidence.md  a_sheet.csv  create_summary_chart.py  data_gaps_and_next_steps.md  industry_wedge_calculations.csv  industry_wedge_parameters.json  iot_sheet.csv  uk_calibrated_wedge_calculations.csv  uk_calibrated_wedge_parameters.json  uk_wedge_calculations_corrected.csv  vat_wedge_calculation.py  vat_wedge_calculation_uk_calibrated.py  wedge_component_analysis.csv
(+20 files in other folders)
